# BLAKE

./: .gitignore  README.md  app.py  geometry.py  notes.txt  operations.py  operations_timeline.md  pyproject.toml  requirements.txt  session.py  specs.txt  test_vectorization.py
handwritten/: opencv_controller.py  panelsession.py  view.py
manga_scans/jp2/: BLAME!_Master_Edition_v01__0003.jp2  BLAME!_Master_Edition_v01__0004.jp2  BLAME!_Master_Edition_v01__0005.jp2  BLAME!_Master_Edition_v01__0006.jp2  BLAME!_Master_Edition_v01__0007.jp2  BLAME!_Master_Edition_v01__0008.jp2  BLAME!_Master_Edition_v01__0009.jp2  BLAME!_Master_Edition_v01__0010.jp2  BLAME!_Master_Edition_v01__0011.jp2  BLAME!_Master_Edition_v01__0012.jp2  BLAME!_Master_Edition_v01__0013.jp2  BLAME!_Master_Edition_v01__0014.jp2  BLAME!_Master_Edition_v01__0015.jp2  BLAME!_Master_Edition_v01__0016.jp2  BLAME!_Master_Edition_v01__0017.jp2  BLAME!_Master_Edition_v01__0018.jp2  BLAME!_Master_Edition_v01__0019.jp2  BLAME!_Master_Edition_v01__0020.jp2  BLAME!_Master_Edition_v01__0021.jp2  BLAME!_Master_Edition_v01__0022.jp2  BLAME!_Master_Edition_v01__0023.jp2  BLAME!_Master_Edition_v01__0024.jp2  BLAME!_Master_Edition_v01__0025.jp2  BLAME!_Master_Edition_v01__0026.jp2  BLAME!_Master_Edition_v01__0027.jp2  BLAME!_Master_Edition_v01__0028.jp2  BLAME!_Master_Edition_v01__0029.jp2  BLAME!_Master_Edition_v01__0030.jp2  BLAME!_Master_Edition_v01__0031.jp2  BLAME!_Master_Edition_v01__0032.jp2  BLAME!_Master_Edition_v01__0033.jp2  BLAME!_Master_Edition_v01__0034.jp2  (+361 more)
src/: __init__.py
util/: rename.py  test_vipslib.py
(+12 files in other folders)
