# Remember to export and update requirements.txt when changing the deps
#TODO write a shell/bash script that does this automatically
[project]
name = "blake"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
  "opencv-python>=4.8.0",
  "PyQt6>=6.6.0",
  "Pillow>=10.0.0",
]